tests/specs/check/unstable_suggestion/no_default_lib.out
Check [WILDCARD]no_default_lib.ts
TS2726 [ERROR]: Cannot find lib definition for 'deno.ns'.
/// <reference lib="deno.ns" />
                    ~~~~
    at file://[WILDCARD]/main.ts:2:21

error: Type checking failed.
